--- a/src/base/common.css
+++ b/src/base/common.css
@@ -98,18 +98,18 @@
     margin: 0 auto;
 }
 
-#content .banner-con {
+#content .banner-box {
     width: 990px;
     margin-left: auto;
     margin-right: auto;
     height: 49px;
 }
 
-#content .banner-con img.customize {
+#content .banner-box img.customize {
     padding: 10px 0 0 10px;
 }
 
-#content .banner-con span {
+#content .banner-box span {
     font-size: 30px;
     height: 49px;
     line-height: 49px;
@@ -117,37 +117,13 @@
     font-family: 'WenQuanYi Micro Hei Mono', 'WenQuanYi Micro Hei', 'Microsoft Yahei Mono', 'Microsoft Yahei', sans-serif;
     float: right;
 }
-#content .banner-con ul {
+#content .banner-box ul {
     float: right;
     height: 49px;
     line-height: 49px;
 }
-#content .banner-con ul li {
+#content .banner-box ul li {
     float: left;
     width: 50px;
     text-align: center;
-}
-
-#content .listdiv {
-    width: 990px;
-    margin: 0 auto;
-}
-
-#content .listdiv ul li {
-    float: left;
-    font-size: 0;
-}
-
-#content .listdiv ul li a {
-    position: relative;
-    width: 495px;
-    height: 450px;
-}
-#content .listdiv ul li a span {
-    position: absolute;
-    top: -183px;
-    left: 61px;
-    font-size: 16px;
-    color: red;
-    z-index: 99;
 }
