--- a/src/base/footer.css
+++ b/src/base/footer.css
@@ -1,4 +1,7 @@
 /*footer START*/
+
+
+
 #footer{
 	padding-top: 20px;
 	height: 100px;
@@ -8,13 +11,64 @@
     background-position: 0 -347px;
     clear: both;
 }
+
 #footer a{
 	color: #130c02;
 }
+
+#footer .footer-bd {
+    border: 2px solid #DDDDDD;
+    border-radius: 2px 2px 2px 2px;
+    width: 986px;
+    margin: 0 auto;
+}
+
+#footer .service {
+    overflow: hidden;
+    padding: 18px 0 15px;
+    width: 986px;
+}
+
+#footer .service dl {
+    border-right: 1px dashed #D3D3D3;
+    float: left;
+    height: 112px;
+    padding: 0 44px;
+}
+
+#footer .service dl.item-3 {
+    padding: 0 55px;
+}
+
+#footer .service dl.item-5 {
+    border: medium none;
+}
+
+#footer .service dl dt {
+    color: #5E5E5E;
+    font-family: "Î¢ÈíÑÅºÚ";
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+#footer .service dl dd {
+    background-position: -396px -31px;
+    line-height: 1.8;
+    text-indent: 10px;
+}
+
+#footer .service dl dd a:link,
+#footer .service dl dd a:visited,
+#footer .service dl dd a:hover {
+    color: #666666;
+}
+
+
 #footer .foot-nav {
     display: block;
     height: 20px;
-    margin: 0 auto;
+    margin: 20px auto 0 auto;
 }
 #footer .foot-nav a {
     margin: 0 7px;
